--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          package="com.MyBusiness.ScholarChat"
+          android:versionCode="1.0.0"
+          android:versionName="1.0.0">
     <application
         android:label="chat_app"
         android:name="${applicationName}"
