--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^3.1.0
   firebase_auth: ^5.1.0
   modal_progress_hud_nsn: ^0.5.1
+  cloud_firestore: ^5.0.1
 
 dev_dependencies:
   flutter_test:
