--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,7 +23,7 @@ apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 31
     defaultConfig {
-        applicationId "com.example.app"
+        applicationId "com.MyBusiness.ScholarChat"
         minSdkVersion 21
         targetSdkVersion 31
         versionCode 1
